Update breakpoints to prevent overflow on some browsers

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,7 @@
 body {
   background-color: var(--bg);
   color: var(--text);
+  overflow-x: hidden;
 }
 
 a {
@@ -51,33 +52,33 @@ a {
   padding-bottom: 2rem;
 }
 
-@media (max-width: 1536px) {
+@media screen and (max-width: 1536px) {
   .container {
-    width: 1366px;
+    width: 1346px;
   }
 }
 
-@media (max-width: 1366px) {
+@media screen and (max-width: 1366px) {
   .container {
-    width: 1280px;
+    width: 1260px;
   }
 }
 
-@media (max-width: 1280px) {
+@media screen and (max-width: 1280px) {
   .container {
-    width: 1024px;
+    width: 1004px;
   }
 }
 
-@media (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
   .container {
-    width: 768px;
+    width: 748px;
   }
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .container {
-    width: 640px;
+    width: 620px;
   }
 
   .child-container {
@@ -86,12 +87,12 @@ a {
   }
 }
 
-@media (max-width: 640px) {
+@media screen and (max-width: 640px) {
   .container {
-    width: 475px;
+    width: 465px;
   }
 }
-@media (max-width: 475px) {
+@media screen and (max-width: 475px) {
   .container {
     width: 380px;
   }
